LSystem/LSystem/obj/Debug/net6.0-windows/DslParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from S:\MB\Univer\ANUL II\Classes II\DDSL\LSystemParser\LSystem\LSystem\Dsl.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LSystem {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class DslParser : Parser {

		public static List<object> Result = new List<object>();

		public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, NUM=22, NAME=23, AXIOM=24;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_forLoop = 2, RULE_start = 3, RULE_type = 4, 
		RULE_name = 5, RULE_end = 6, RULE_incrementSize = 7, RULE_function = 8, 
		RULE_lstree = 9, RULE_lsdragon = 10, RULE_freestyle = 11, RULE_axiom = 12, 
		RULE_applies = 13, RULE_angle = 14, RULE_length = 15, RULE_rules = 16, 
		RULE_color = 17, RULE_task = 18, RULE_path = 19;
	public static readonly string[] ruleNames = {
		"program", "line", "forLoop", "start", "type", "name", "end", "incrementSize", 
		"function", "lstree", "lsdragon", "freestyle", "axiom", "applies", "angle", 
		"length", "rules", "color", "task", "path"
	};

	private static readonly string[] _LiteralNames = {
		null, "'for('", "';'", "') {'", "'}'", "' '", "'='", "'int'", "'<'", "'++'", 
		"'--'", "'ls tree('", "','", "');'", "'ls dragon('", "'ls freestyle'", 
		"'('", "'\"'", "'{'", "':'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "NUM", "NAME", 
		"AXIOM"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Dsl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public DslParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(DslParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__10) | (1L << T__13) | (1L << T__14))) != 0)) {
				{
				{
				State = 40; line();
				}
				}
				State = 45;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 46; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public ForLoopContext forLoop() {
			return GetRuleContext<ForLoopContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 50;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__10:
			case T__13:
			case T__14:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48; function();
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49; forLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForLoopContext : ParserRuleContext {
		public StartContext start() {
			return GetRuleContext<StartContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public IncrementSizeContext incrementSize() {
			return GetRuleContext<IncrementSizeContext>(0);
		}
		public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forLoop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterForLoop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitForLoop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForLoopContext forLoop() {
		ForLoopContext _localctx = new ForLoopContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_forLoop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(T__0);
			State = 53; start();
			State = 54; Match(T__1);
			State = 55; end();
			State = 56; Match(T__1);
			State = 57; incrementSize();
			State = 58; Match(T__2);
			State = 62;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__13) | (1L << T__14))) != 0)) {
				{
				{
				State = 59; function();
				}
				}
				State = 64;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 65; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; type();
			State = 68; Match(T__4);
			State = 69; name();
			State = 70; Match(T__5);
			State = 71; Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(DslParser.NAME, 0); }
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_name);
		try {
			State = 81;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; Match(NAME);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; Match(NAME);
				State = 77; Match(NUM);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 78; Match(NAME);
				State = 79; Match(NUM);
				State = 80; name();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(DslParser.NAME, 0); }
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public EndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_end; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterEnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitEnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EndContext end() {
		EndContext _localctx = new EndContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_end);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(NAME);
			State = 84; Match(T__7);
			State = 85; Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncrementSizeContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(DslParser.NAME, 0); }
		public IncrementSizeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_incrementSize; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterIncrementSize(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitIncrementSize(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrementSize(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncrementSizeContext incrementSize() {
		IncrementSizeContext _localctx = new IncrementSizeContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_incrementSize);
		try {
			State = 91;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; Match(NAME);
				State = 88; Match(T__8);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 89; Match(NAME);
				State = 90; Match(T__9);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public FreestyleContext freestyle() {
			return GetRuleContext<FreestyleContext>(0);
		}
		public LstreeContext lstree() {
			return GetRuleContext<LstreeContext>(0);
		}
		public LsdragonContext lsdragon() {
			return GetRuleContext<LsdragonContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_function);
		try {
			State = 96;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__14:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93; freestyle();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94; lstree();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95; lsdragon();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LstreeContext : ParserRuleContext {
		public AppliesContext applies() {
			return GetRuleContext<AppliesContext>(0);
		}
		public ColorContext color() {
			return GetRuleContext<ColorContext>(0);
		}
		public LstreeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lstree; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterLstree(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitLstree(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
				object function;
				IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
				if (typedVisitor != null)
				{
					function = typedVisitor.VisitLstree(this);
					Result.Add(function);
					return (TResult)function;
				}
				else
				{
					return visitor.VisitChildren(this);
				}
			}
	}

	[RuleVersion(0)]
	public LstreeContext lstree() {
		LstreeContext _localctx = new LstreeContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_lstree);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(T__10);
			State = 99; applies();
			State = 102;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__11) {
				{
				State = 100; Match(T__11);
				State = 101; color();
				}
			}

			State = 104; Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LsdragonContext : ParserRuleContext {
		public AppliesContext applies() {
			return GetRuleContext<AppliesContext>(0);
		}
		public ColorContext color() {
			return GetRuleContext<ColorContext>(0);
		}
		public LsdragonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lsdragon; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterLsdragon(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitLsdragon(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
				object function;
				IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
				if (typedVisitor != null)
				{
					function = typedVisitor.VisitLsdragon(this);
					Result.Add(function);
					return (TResult)function;
				}
				else
				{
					return visitor.VisitChildren(this);
				}
			}
	}

	[RuleVersion(0)]
	public LsdragonContext lsdragon() {
		LsdragonContext _localctx = new LsdragonContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_lsdragon);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(T__13);
			State = 107; applies();
			State = 110;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__11) {
				{
				State = 108; Match(T__11);
				State = 109; color();
				}
			}

			State = 112; Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FreestyleContext : ParserRuleContext {
		public AxiomContext axiom() {
			return GetRuleContext<AxiomContext>(0);
		}
		public AppliesContext applies() {
			return GetRuleContext<AppliesContext>(0);
		}
		public AngleContext angle() {
			return GetRuleContext<AngleContext>(0);
		}
		public LengthContext length() {
			return GetRuleContext<LengthContext>(0);
		}
		public RulesContext rules() {
			return GetRuleContext<RulesContext>(0);
		}
		public ColorContext color() {
			return GetRuleContext<ColorContext>(0);
		}
		public FreestyleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_freestyle; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterFreestyle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitFreestyle(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
				object function;
				IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
				if (typedVisitor != null)
				{
					function = typedVisitor.VisitFreestyle(this);
					Result.Add(function);
					return (TResult)function;
				}
				else
				{
					return visitor.VisitChildren(this);
				}
			}
	}

	[RuleVersion(0)]
	public FreestyleContext freestyle() {
		FreestyleContext _localctx = new FreestyleContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_freestyle);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(T__14);
			State = 115; Match(T__15);
			State = 116; Match(T__16);
			State = 117; axiom();
			State = 118; Match(T__16);
			State = 119; Match(T__11);
			State = 120; applies();
			State = 121; Match(T__11);
			State = 122; angle();
			State = 123; Match(T__11);
			State = 124; length();
			State = 125; Match(T__11);
			State = 126; rules(0);
			State = 129;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__11) {
				{
				State = 127; Match(T__11);
				State = 128; color();
				}
			}

			State = 131; Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AxiomContext : ParserRuleContext {
		public ITerminalNode AXIOM() { return GetToken(DslParser.AXIOM, 0); }
		public ITerminalNode NAME() { return GetToken(DslParser.NAME, 0); }
		public AxiomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_axiom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterAxiom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitAxiom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAxiom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AxiomContext axiom() {
		AxiomContext _localctx = new AxiomContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_axiom);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			_la = _input.La(1);
			if ( !(_la==NAME || _la==AXIOM) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AppliesContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public AppliesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_applies; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterApplies(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitApplies(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitApplies(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AppliesContext applies() {
		AppliesContext _localctx = new AppliesContext(_ctx, State);
		EnterRule(_localctx, 26, RULE_applies);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AngleContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public AngleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_angle; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterAngle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitAngle(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAngle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AngleContext angle() {
		AngleContext _localctx = new AngleContext(_ctx, State);
		EnterRule(_localctx, 28, RULE_angle);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LengthContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(DslParser.NUM, 0); }
		public LengthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_length; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.EnterLength(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDslListener typedListener = listener as IDslListener;
			if (typedListener != null) typedListener.ExitLength(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDslVisitor<TResult> typedVisitor = visitor as IDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLength(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LengthContext length() {
		LengthContext _localctx = new LengthContext(_ctx, State);
		EnterRule(_localctx, 30, RULE_length);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
